--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -40,7 +40,7 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
-        android:id="@+id/weatherLabel"
+        android:id="@+id/weatherIcon"
         android:layout_width="240dp"
         android:layout_height="240dp"
         app:srcCompat="@mipmap/ic_launcher"
